--- a/css/main.css
+++ b/css/main.css
@@ -17,3 +17,21 @@ header {
 header .fa-chevron-left {
   margin-right: 16px;
 }
+
+.search{
+  padding: 15px;
+  background-color: #F44336;
+}
+
+.border-none{
+    border: 1px solid #fff;
+}
+.box-shadow{
+   -webkit-box-shadow: inset 0 0 0 rgb(0, 0, 0) !important;
+  box-shadow: inset 0 0 0 rgb(0, 0, 0) !important;
+}
+.border-none:focus{
+  border-color: #fff;
+  -webkit-box-shadow: inset 0 0 0 rgb(0, 0, 0) !important;
+  box-shadow: inset 0 0 0 rgb(0, 0, 0) !important;
+}
