--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ header .fa-chevron-left {
 
 .panel-search .search {
   padding: 15px;
-  background-color: #F44336;
+  background-color: #f44336;
 }
 
 .panel-search .border-none {
@@ -46,4 +46,26 @@ header .fa-chevron-left {
 }
 .color-black{
   color: black;
+}
+.btn-station-left{
+  position: absolute;
+  top: -44px;
+  left: -2px;
+  color: #fff;
+  background-color: #f44336;
+  border: none;
+  font-size: 12px;
+}
+.fa-angle-left{
+  font-size: 20px;
+}
+.margin-left-20{
+  margin-left: 30px;
+}
+.margin-right-10{
+  margin-right: 10px;
+}
+#map {
+  width: 100%;
+  height: 50vh;
 }
